--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ footer {
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
-  font-size: 0.6rem;
+  font-size: calc(0.4rem + 0.2vw);
   text-shadow: 0px 1px 1px black;
   text-shadow: 1px 1px 0px #000000;
 }
